...
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_salario_liquido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salario liquido: $ 0"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
...

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Jubilatorio"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_jubilatorio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$ 0"
                        android:layout_gravity="center"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FONASA"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_fonasa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$ 0"
                        android:layout_gravity="center"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FRL"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_frl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$ 0"
                        android:layout_gravity="center"/>
                </TableRow>

...

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Total BPS"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_total_bps"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:text="$ 0"
                        android:textSize="16sp"
                        android:textStyle="bold"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_deducciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Deducciones: $ 0"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_tasa_deducciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tasa Deducciones: 0 %"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/tv_total_irpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total IRPF: $ 0"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
...
