<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/white"
    tools:context=".activities.form.FormActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout
        android:id="@+id/ll_hasChildren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="Salario liquido Uruguay"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="2024"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="Salario Nominal en pesos:  $"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_salary_nominal"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Calculo de aportes BPS"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="Tiene hijos a cargo?" />

            <CheckBox
                android:id="@+id/cb_hasChildren"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="Tiene Conyuje a cargo?" />


            <CheckBox
                android:id="@+id/cb_hasConyuge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_has_deductions_option"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="Tiene deducciones?" />


            <CheckBox
                android:id="@+id/cb_hasDeductions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_deductions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Calculo de IRPF"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Cantidad de personas a cargo: "
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:text="Porcentaje deduccion personas a cargo:" />


                    <Spinner
                        android:id="@+id/sp_percentage_deduction"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:text="Cantidad de hijos sin discapcidad: " />

                    <EditText
                        android:id="@+id/et_qty_children_without_disability"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:hint="0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:text="Cantidad de hijos con discapcidad: " />

                    <EditText
                        android:id="@+id/et_qty_children_with_disability"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:hint="0" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Si es profesional:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="Aporta al Fondo de Solidaridad?: " />


                <Spinner
                    android:id="@+id/sp_contribution_solidarity_fund"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="Adicional Fondo de Solidaridad? " />


                <CheckBox
                    android:id="@+id/cb_additional_solidarity_fund"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="Aporte mensual a CJPPU o Caja Notarial:" />

                <EditText
                    android:id="@+id/et_monthly_contribution_cjppu_or_notarial_box"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="Otras deducciones" />

                <EditText
                    android:id="@+id/et_other_deductions"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="0" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" />

    </LinearLayout>
</ScrollView>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:text="Calcular" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>